Change scanning method&optimize code&fix CVE